[package]
name = "quicksink"
version = "0.1.2"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Create a Sink from some value and a closure returning a Future."
keywords = ["async", "futures", "sink"]
categories = ["asynchronous"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/paritytech/quicksink"
edition = "2018"

[dependencies]
futures-core = "0.3.1"
futures-sink = "0.3.1"
pin-project-lite = "0.1.1"

[dev-dependencies]
async-std = "1"
futures = "0.3.1"
